<resources>
    <string name="app_name">Tally</string>
    <string name="debug">DEBUG</string>
    <string name="search">搜索</string>
    <string name="current_month_expense">本月支出</string>
    <string name="current_month_earning">本月收入</string>
    <string name="remain_budget">剩余预算</string>
    <string name="look_chart_analysis">查看图表分析</string>
    <string name="today_expense_earning">今日支出 %s&#160;&#160;&#160;收入 %s</string>
    <string name="shopping">购物</string>
    <string name="tap_to_set_budget">点击设置预算</string>
    <string name="set_budget">设置预算</string>
    <string name="please_input_month_budget">请输入本月预算</string>
    <string name="sure">确定</string>
    <string name="please_input_positive_int">请输入大于0的整数</string>
    <string name="expense">支出</string>
    <string name="earning">收入</string>
    <string name="write_one_tally">记一笔</string>
    <string name="add_remark">添加备注</string>
    <string name="config">设置</string>
    <string name="add_category">添加分类</string>
    <string name="save">保存</string>
    <string name="please_input_type_name">请输入分类名称</string>
</resources>
