<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/padding_normal"
            android:textSize="@dimen/text_size_very_big"
            android:textColor="@color/textColorPrimary"
            android:text="@string/set_budget"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:paddingTop="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="0dp"
            android:textSize="@dimen/text_size_very_big"
            android:textColor="@color/textColorPrimary"
            android:text="￥"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/unit"
            android:layout_marginEnd="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginStart="4dp"
            android:paddingTop="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_normal"
            android:background="@null"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:inputType="numberSigned"
            android:hint="@string/please_input_month_budget"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/budget"
            android:layout_marginStart="@dimen/padding_normal"
            android:layout_marginEnd="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            app:cornerRadius="20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_big"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sure"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/padding_normal"
            android:background="@drawable/bg_clickable_view"
            android:src="@drawable/ic_close"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>