<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.yikexiya.tally.ui.home.HomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginTop="@dimen/recycler_item_padding"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/bg_common_card_white_normal"
        android:onClick="@{(v) -> vm.onMonthExpenseClick(v)}"
        android:padding="@dimen/padding_normal">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/month_expense_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/current_month_expense"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/textColorThird"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/month_expense_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/month_expense_label"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:text="@{vm.monthExpense}"
            android:textSize="32sp"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold"
            tools:text="￥123.45" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="60dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/month_expense_value"
            app:layout_constraintBottom_toBottomOf="@id/month_expense_value"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:srcCompat="@drawable/ic_eye_selector"
            android:background="@drawable/bg_clickable_view"
            app:selected="@{vm.moneyVisible}"
            android:onClick="@{() -> vm.onEyeClick()}"
            tools:src="@drawable/ic_eye_open"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/month_earning_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/month_expense_value"
            android:layout_marginTop="@dimen/padding_small"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/textColorThird"
            android:text="@string/current_month_earning"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/month_earning_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/month_earning_label"
            app:layout_constraintBottom_toBottomOf="@id/month_earning_label"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@{vm.monthEarning}"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold"
            tools:text="￥123.45"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/month_budget_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/month_earning_label"
            android:onClick="@{(v) -> vm.onRemainBudgetClick(v)}"
            android:text="@{vm.monthBudget}"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold"
            tools:text="￥123.45"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/month_budget_value"
            app:layout_constraintBottom_toBottomOf="@id/month_earning_label"
            android:layout_marginEnd="@dimen/padding_small"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/textColorThird"
            android:text="@string/remain_budget"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/month_earning_label"
            app:layout_constraintEnd_toStartOf="@id/tip"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:paddingTop="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_chart"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon"
            app:layout_constraintBottom_toBottomOf="@id/icon"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_small"
            android:text="@string/look_chart_analysis"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>